--- a/Uppgift 2/uppg2style.css
+++ b/Uppgift 2/uppg2style.css
@@ -1,17 +1,17 @@
 body {
-    background-color: rgb(71, 69, 177);
-    color: aqua;
+    background-color: #F0F2F2;
+    color: #6FBFBF;
 }
   
   h1 {
-    color: rgb(175, 48, 158);
+    color: #010326;
     margin-left: 20px;
     font: 22px arial, sans-serif;
   }
 
   .program{
-    color: darkslategray;
-    background-color: rgb(118, 124, 124);
+    color: rgb(27, 36, 36);
+    background-color: rgb(209, 218, 218);
     text-align: center;
   }
 
@@ -23,4 +23,4 @@ body {
     outline-style: double;
   }
   
-  a{text-decoration: none;}
+  a{text-decoration: none; color: #393E59 ;}
