--- a/Uppgift 3/uppg3style.css
+++ b/Uppgift 3/uppg3style.css
@@ -3,19 +3,20 @@ table, th, td{border: 1px solid black; border-collapse: collapse;}
     width: 500px;
     height: fit-content;}
 .cpus tr:nth-child(odd){
-    background-color: #cc0000;}
+    background-color: #cc0000; color: white;}
 .cpus tr:nth-child(even){
     background-color: #f1c232;}
 .cpus tr:nth-child(1){
-    background-color: #efefef;}
+    background-color: #efefef;color: black;}
 .cpus td:nth-child(4), .cpus th:nth-child(4){
     text-align: right;}
 .cpus td:nth-child(2), .cpus td:nth-child(3), cpus th:nth-child(2), .cpus th:nth-child(3) {
     text-align: center;}
-
+.cpus th:nth-child(1){text-align: left;}
+caption{margin-top: 5px;caption-side: bottom;font-size: x-large; font-weight: 550;}
 
     .colored{
-        width: 500px;
+        width: 600px;
         height: 400px;}
     .first{
     background-color:#4a86e8;}
